<resources>
    <string name="app_name">Umbrella</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="section1_tab_title1">Lesson</string>
    <string name="section1_tab_title2">Case Study</string>
    <string name="section1_tab_title3">Checklist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btn_login">Login</string>
    <string name="btn_skip">Accept</string>
    <string name="pw_hint">Password</string>
    <string name="title_activity_tour">Tour</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_finish">Finish</string>
    <string name="action_next">Next</string>
    <string name="action_search">Search</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Open</string>
    <string name="title_activity_search">Search results</string>
    <string name="no_results_label">No results found</string>
    <string name="no_network_message">No network connection available. Please try again later.</string>
    <string name="login_password">Log in with your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="incorrect_password">Password incorrect. Please try again.</string>
    <string name="set_password">Set password</string>
    <string name="my_checklists">My Checklists</string>
    <string name="feeds">Dashboard</string>
    <string name="feed">Feed</string>
    <string name="check_lists_total">Check lists total</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log In</string>
    <string name="general">General</string>
    <string name="beginner">Beginner</string>
    <string name="expert">Expert</string>
    <string name="intermediate">Advanced</string>
    <string name="action_export_checklist">Share checklist</string>
    <string name="title_activity_lesson">LessonActivity</string>
    <string name="favourite">Favourite</string>
    <string name="refresh_interval_feeds">Refresh interval for feeds</string>
    <string name="refresh_umbrella_data">Refresh from the server</string>
    <string name="set_location">Your location</string>
    <string name="feed_sources">Feed sources</string>
    <string name="no_feed_updates">There were no news updates for your chosen country, pull to refresh.</string>
    <string name="reset_password_title">Confirm reset password</string>
    <string name="reset_password_text">Are you sure you want to reset your password? This also means losing any data you might have entered so far\n</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password_reset_notification">Password reset and all data removed.</string>
    <string name="title_activity_about">Licences</string>
    <string name="default_db_password">umbrella</string>
    <string name="no_feed_settings">You haven\'t set the country and the sources for the feed yet. You have to do it in order for the feed to start displaying, and you can change it any time later in the settings.</string>
    <string name="feed_location_label">Set the location for your feeds</string>
    <string name="no_feed_items_label">There is currently no results with your chosen settings. Please tap to revise and change them</string>
    <string name="disable_password">Don\'t ask for password again</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="tour_slide_1_text">Umbrella makes your security simple</string>
    <string name="tour_slide_2_text">Get advice on everything from sending a secure email to safe travel</string>
    <string name="tour_slide_3_text">Use checklists to mark your progress</string>
    <string name="tour_slide_4_text">Stay up to date with the latest information on where you are</string>
    <string name="skip_password_warning">Are you sure you want to continue using the app without setting the password?\n\nThis significantly diminishes your safety in regards with any identifiable data you input into Umbrella</string>
    <string name="skip_password">Skip password</string>
    <string name="skip_password_title">Skip setting password</string>
    <string name="set_password_body">Your password must be at least 8 characters long and must contain at least one digit and one capital letter\n</string>
    <string name="set_password_title">Set your password</string>
    <string name="change_password_title">Change your password</string>
    <string name="country_selected">Country selected</string>
    <string name="lat_updated">Last updated</string>
    <string name="set_location_source_in_settings">Please set sources and location in the settings</string>
    <string name="no_sources_selected">No sources selected</string>
    <string name="choose_refresh_inteval">Choose refresh interval:</string>
    <string name="select_feed_sources">Select The Feed Sources</string>
    <string name="current_location">Current location</string>
    <string name="terms_html"><![CDATA[<p><strong>Most important Terms and Privacy points</strong></p><p>Terms of Service and Privacy Policies are important. You should always know what you’re agreeing to, so you should always read the terms and conditions carefully. You can read ours in full <a href=\'https://secfirst.org/terms.html\'>here.</a></p><p>That said, we know people don’t usually read them all that carefully, so we’ve outlined the main points of ours below.</p><p>&bull;&nbsp;&nbsp;&nbsp;<strong>We don’t take your data</strong> – We take your security and privacy very seriously. That’s why we don’t take any personal data from you and you stay anonymous. We don’t have access to anything you store or input into the app – that information is only stored on your device. (This means that we can’t recover your data if you accidently delete it or forget your password.) We can’t see anything about you, so no one else can either.</p><p>&bull;&nbsp;&nbsp;&nbsp;<strong>We don’t track you</strong> – If you want to use the dashboard to get up-to-date information on risks in your area, you just enter the city – we don’t track your location. Ever.</p><p>&bull;&nbsp;&nbsp;&nbsp;<strong>We recommend you use a password</strong> – If you want to save your checklists and keep an eye on your progress, we recommend you put a password on the app. This will encrypt the app. If someone gets their hands on your phone you don’t want them knowing which security protocols you’ve implemented and which you haven’t. We haven’t made this compulsory in case you weren’t storing much, but we think you’re better safe than sorry.</p><p>&bull;&nbsp;&nbsp;&nbsp;<strong>We’re not liable</strong> – Umbrella is an app full of advice on what to do in risky situations. This advice may not always apply and you should consider all potential risks, use a wide range of advice, and use your own judgement before deciding what to do. We hope you’ll understand that we are not liable or responsible for the actions you take – basically that whatever you do is done at your own risk.</p><p>&bull;&nbsp;&nbsp;&nbsp;<strong>It’s free</strong> – Umbrella is free to use and there are no advertisements. Its development is supported by grants and training revenue. Like us, almost all the tools we recommend are free, open-source, and where appropriate, end-to-end encrypted.</p>]]></string>
    <string name="select_action">Select an action</string>
    <string name="delete">Delete</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="unfauvorite">Unfavourite</string>
    <string name="result_while_searching_for">result while searching for</string>
    <string name="my_security">My Security</string>
    <string name="total_done">Total done</string>
    <string name="no_check_items_started_on_yet">No check items started on yet</string>
    <string name="mark_off_tasks">Mark off tasks as you complete them\n\nHold down on a task to delete or disable it</string>
    <string name="click_to_add_new_tasks">Click here to add new tasks – you’ll need to create a password for this!</string>
    <string name="star_this_checklist">Star this checklist to make it one of your favourites\n\nClick here to share checklist</string>
    <string name="slide">"Slide "</string>
    <string name="checklist">Checklist</string>
    <string name="add_new_checkitem">Add a new check item</string>
    <string name="add_own_checklist_item">Add your own checklist item\n</string>
    <string name="you_have_added_new_item">You have added a new item.</string>
    <string name="text_item_has_to_be_longer">The item text has to be longer than that</string>
    <string name="filled">filled</string>
    <string name="old_password_incorrect">Old password is incorrect.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="you_have_successfully_set_your_password">You have successfully set your password.</string>
    <string name="you_have_successfully_changed_your_password">You have successfully changed your password.</string>
    <string name="choose_stronger_password">"You must choose a stronger password. "</string>
    <string name="skip">Skip</string>
    <string name="content_reset_to_default">Content reset to default</string>
    <string name="dashboard">Dashboard</string>
    <string name="password_too_short">Password too short</string>
    <string name="password_one_digit">Password must have at least one digit</string>
    <string name="password_one_capital">Password must have at least one capital letter</string>
    <string name="password_one_small">Password must have at least one small letter</string>
    <string name="half_hour">30 min</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="manually">Manually</string>
    <string name="licences">Licences</string>
    <string name="thank_you">Thank You</string>
    <string name="thank_you_html"><![CDATA[<h2>THANK YOU</h2><p>Umbrella would not be possible without the work, advice, friendship and cups of tea from our friends at:<br><ul><li>Amnesty International</li><li>Ashoka Foundation</li><li>CARE International</li><li>Centre for Safety and Development</li><li>Committee to Project Journalists</li><li>Dart Center for Journalism and Trauma</li><li>Electronic Frontier Foundation</li><li>European Commission\'s Humanitarian Aid and Civil Protection Department</li><li>European Interagency Security Forum</li><li>Frontline Defenders</li><li>Humanitarian Response</li><li>iiLab</li><li>Internews</li><li>LevelUp</li><li>Open Technology Fund</li><li>Overseas Development Institute</li><li>Protection International</li><li>Rory Peck Trust</li><li>Small World News</li><li>Tactical Technology Collective</li><li>The Engine Room</li><li>The Guardian Project</li><li>Videre</li><li>And many other wonderful people!</li></p>]]></string>
    <string name="show_notifications">Show updates as notification</string>
    <string name="notifications">Notification</string>
    <string name="notification_ringtone">Notification ringtone: %s</string>
    <string name="select_ringtone">Select ringtone</string>
    <string name="notification_vibration">Notification vibration</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="old_password">Old Password</string>
</resources>