<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:persistent="false"
            android:title="@string/skip_password"
            android:summary="@string/disable_password"
            android:key="skip_password"
            />

        <Preference android:key="refresh_data"
            android:title="@string/refresh_umbrella_data"
            android:summary="@string/refresh_umbrella_data"
            android:persistent="false"
            />

        <Preference android:key="mask_app"
            android:title="@string/action_mask"
            android:summary="@string/masking_mode_title"
            android:persistent="false"
            />

        <ListPreference
            android:persistent="false"
            android:title="@string/select_language"
            android:summary="@string/select_language"
            android:key="select_language" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/feed">

        <ListPreference
            android:persistent="false"
            android:title="@string/refresh_interval_feeds"
            android:summary="@string/choose_refresh_inteval"
            android:key="refresh_interval" />

        <Preference android:key="set_location"
            android:title="@string/set_location"
            android:summary="@string/set_location"
            android:persistent="false"
            />

        <Preference android:key="feed_sources"
            android:title="@string/feed_sources"
            android:summary="@string/feed_sources"
            android:persistent="false"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:persistent="false"
            android:title="@string/show_notifications"
            android:summary="@string/show_notifications"
            android:key="show_notifications"
            />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:persistent="false"
            android:title="@string/notification_vibration"
            android:summary="@string/notification_vibration"
            android:key="notification_vibration"
            />

        <Preference android:key="notification_ringtone"
            android:title="@string/select_ringtone"
            android:summary="@string/notification_ringtone"
            android:persistent="false"
            />

    </PreferenceCategory>

</PreferenceScreen>