<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@drawable/background"
    android:layout_height="wrap_content"
    tools:context="org.secfirst.umbrella.fragments.DashboardFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        tools:context="org.secfirst.umbrella.fragments.DashboardFragment">

        <LinearLayout
            android:id="@+id/checklist_total"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/check_lists_total"
                android:layout_width="fill_parent"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/umbrella_green"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/check_category"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/dark_grey"
                        android:layout_width="wrap_content"
                        android:layout_weight="5"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/check_percent"
                        android:textSize="@dimen/text_size_xlarge"
                        android:textColor="@color/dashboard_light_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/check_lists_individual"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/my_checklists"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/umbrella_yellow"
                android:layout_marginBottom="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <ListView
                android:id="@+id/check_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/check_list_no_view"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp">

                <TextView
                    android:text="No check items started on yet"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_smaller"
                    android:textColor="@color/dark_grey"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/feeds"
                android:visibility="gone"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/umbrella_purple_dark"
                android:layout_marginBottom="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <ListView
                android:id="@+id/feed_list"
                android:layout_width="fill_parent"
                android:layout_height="350dp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
